samples/_failures_safe/1761137318_f48eed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26cdfca8.c: In function ‘main’:
./samples/SAFE/__tmp_26cdfca8.c:166:5: error: expected declaration or statement at end of input
  166 |     Lexer lexer = {buffer, 0, len};
      |     ^~~~~
